# aws-service-bot

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
.github/workflows/: build.yml  ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/agent/: __init__.py  agent.py
backend/app/api/: schemas.py
backend/app/api/routes/: chat.py  health.py
backend/tests/: conftest.py  test_agent.py  test_chat.py  test_health.py
frontend/: Dockerfile  pyproject.toml
frontend/app/: __init__.py  client.py  main.py
frontend/tests/: test_client.py
infra/: app.py  cdk.json  pyproject.toml
infra/stacks/: __init__.py  ecr_stack.py  ecs_stack.py
