[project]
name = "aws-support-bot-backend"
version = "0.1.0"
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "langchain",
    "langgraph",
    "langchain-aws",
    "langchain-tavily",
    "pydantic",
    "pydantic-settings",
    "boto3",
    "httpx",
    "python-json-logger",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "ruff",
    "mypy",
    "boto3-stubs[bedrock-runtime]",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = false
