[project]
name = "aws-support-bot-infra"
version = "0.1.0"
requires-python = ">=3.12,<3.15"
dependencies = [
    "aws-cdk-lib",
    "constructs",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 88
