[project]
name = "aws-support-bot-infra"
version = "0.1.0"
requires-python = ">=3.12,<3.15"
dependencies = [
    "aws-cdk-lib==2.254.0",
    "constructs>=10.5.0",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.mypy]
python_version = "3.12"
strict = true
